Added coupon log header.

--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
@@ -1,6 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
+<h2>{% trans %}Coupon log{% endtrans %}</h2>
 
 <table class="style">
   <thead>
