--- a/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
@@ -9,7 +9,7 @@
 <p class="box"><a href="{{ path('club_event_adminevent_new', {'year':current|date('Y'), 'month':current|date('n')}) }}" class="btn-create"><span>{% trans %}Create event{% endtrans %}</span></a></p>
 
       <!-- Calendar -->
-      <table id="calendar-02" class="width100">
+      <table id="calendar-02" class="width100 style">
         {% for event in events %}
         <tr>
           <th style="width:100px;">{{ event.startDate|date('l') }}<br />{{ event.startDate|date('Y/n/j') }}</th>
