--- a/src/Club/LayoutBundle/Resources/public/css/main.css
+++ b/src/Club/LayoutBundle/Resources/public/css/main.css
@@ -220,6 +220,8 @@ OTHERS
 .input-text-02 {padding:5px; font:140%/1.5 "arial", sans-serif;}
 .input-submit {padding:5px; font-size:120%;}
 .input-submit-02 {padding:1px; font-size:100%;}
+textarea.input-text {width: 400px; height: 100px;}
+textarea.big {width: 600px; height: 400px;}
 
 /* =============================================================================
 MESSAGES
