Improved shop template.

--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
@@ -1,5 +1,5 @@
   {{ form_row(form.TimeInterval) }}
-  <span class="smaller low">{% trans %}Info: What is the time interval for this subscription? Ex. 0Y2M13DT2H0I0S{% endtrans %}</span>
+  <span class="smaller low">{% trans %}Info: What is the time interval for this subscription? Ex. 0Y2M13DT2H0M0S{% endtrans %}</span>
   {{ form_row(form.Ticket) }}
   <span class="smaller low">{% trans %}Info: How many tickets will the user get for this subscription?{% endtrans %}</span>
   {{ form_row(form.AutoRenewal) }}
