Added minutes an hours to subscription table.

--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -22,11 +22,11 @@
       <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':subscription.active} %}</td>
       <td>{{ subscription.type|capitalize }}</td>
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
-      <td>{{ subscription.startDate|date('Y-m-d') }}</td>
+      <td>{{ subscription.startDate|date('Y-m-d H:i') }}</td>
       {% if subscription.expireDate == '' %}
       <td>Never</td>
       {% else %}
-      <td>{{ subscription.expireDate|date('Y-m-d') }}</td>
+      <td>{{ subscription.expireDate|date('Y-m-d H:i') }}</td>
       {% endif %}
       <td>
         {% if not subscription.isExpired %}
