--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
@@ -5,6 +5,8 @@
 
 <p>{% trans %}This is where you edit the different attributes for your product, if your product should have some special attributes.{% endtrans %}</p>
 
+{{ form_errors(form) }}
+
 <form method="post" action="{{ path('admin_shop_product_attribute', {'id':product.id}) }}">
 {% include "ClubShopBundle:AdminProductAttribute:form.html.twig" %}
 </form>
