--- a/src/Club/UserBundle/Resources/views/AdminLocation/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocation/index.html.twig
@@ -7,10 +7,10 @@
 <p>{% trans %}If you want to change some configuration, you can change it for all child elements by change the root element configurations.{% endtrans %}</p>
 
 <ul>
-  <li>{{ root }}
-  {% include "ClubLayoutBundle:Default:config_link.html.twig" with {'url':path('admin_location_config', {'id':root.id})} %}
+  <li>{{ location }}
+  {% include "ClubLayoutBundle:Default:config_link.html.twig" with {'url':path('admin_location_config', {'id':location.id})} %}
 
-    <ul>{% for location1 in root.childs %}
+    <ul>{% for location1 in location.childs %}
       <li>{{ location1.locationName }}
   {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_location_edit', {'id':location1.id})} %}
   {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_location_delete', {'id':location1.id})} %}
