--- a/src/Club/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Product/index.html.twig
@@ -17,19 +17,19 @@
   <h2>{% trans %}Attributes{% endtrans %}</h2>
   <ul>
   {% for attr in product.productAttributes %}
-    {% if attr.attribute.attributeName == 'TimeInterval' %}
+    {% if attr.attribute.attributeName == 'time_interval' %}
     <li>{% trans with {'%time%':attr.timeInterval} %}Your subscription will last <b>%time%</b>.{% endtrans %}</li>
     {% endif %}
-    {% if attr.attribute.attributeName == 'Ticket' %}
+    {% if attr.attribute.attributeName == 'ticket' %}
     <li>{% trans with {'%tickets%':attr.value} %}You will receive <b>%tickets% tickets</b>.{% endtrans %}</li>
     {% endif %}
-    {% if attr.attribute.attributeName == 'AutoRenewal' %}
+    {% if attr.attribute.attributeName == 'auto_renewal' %}
     <li>{% trans %}Your subscription will be <b>automatically renewed</b>.{% endtrans %}</li>
     {% endif %}
-    {% if attr.attribute.attributeName == 'Lifetime' %}
+    {% if attr.attribute.attributeName == 'lifetime' %}
     <li>{% trans %}Your subscription will <b>never expire</b>.{% endtrans %}</li>
     {% endif %}
-    {% if attr.attribute.attributeName == 'AllowedPauses' %}
+    {% if attr.attribute.attributeName == 'allowed_pauses' %}
     <li>{% trans with {'%pauses%':attr.value} %}You will be able to take <b>%pauses% pauses</b> during your membership period.{% endtrans %}</li>
     {% endif %}
   {% endfor %}
@@ -37,7 +37,5 @@
   {% endif %}
 
 </div> <!-- /box-03 -->
-
-
 
 {% endblock %}
