--- a/src/Club/DashboardBundle/Resources/views/AdminDashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/AdminDashboard/index.html.twig
@@ -3,5 +3,7 @@
 {% block body %}
 
 {% include "ClubDashboardBundle:AdminDashboard:order_table.html.twig" %}
+{% include "ClubDashboardBundle:AdminDashboard:user_table.html.twig" %}
+{% include "ClubDashboardBundle:AdminDashboard:log_table.html.twig" %}
 
 {% endblock %}
