--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -29,12 +29,13 @@
       <td>{{ subscription.expireDate|date('Y-m-d H:i') }}</td>
       {% endif %}
       <td>
-        {% if not subscription.isExpired %}
+        {% if subscription.expired %}
+          {% if subscription.paused %}
+            {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('shop_subscription_resume', {'id':subscription.id})} %}
+          {% endif %}
+        {% endif %}
         {% if subscription.active %}
           {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('shop_subscription_pause', {'id':subscription.id})} %}
-        {% else %}
-          {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('shop_subscription_resume', {'id':subscription.id})} %}
-        {% endif %}
         {% endif %}
       </td>
     </tr>
