--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -22,13 +22,13 @@
       <td>{{ subscription.expireDate|date('Y-m-d H:i') }}</td>
       {% endif %}
       <td>
-        {% if not subscription.isExpired %}
-          {% include "ClubLayoutBundle:Default:expire_link.html.twig" with {'url':path('admin_shop_subscription_expire', {'id':subscription.id})} %}
         {% if subscription.active %}
-          {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('admin_shop_subscription_pause', {'id':subscription.id})} %}
-        {% else %}
-          {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('admin_shop_subscription_resume', {'id':subscription.id})} %}
-        {% endif %}
+          {% include "ClubLayoutBundle:Default:expire_link.html.twig" with {'url':path('admin_shop_subscription_expire', {'id':subscription.id})} %}
+          {% if subscription.paused %}
+            {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('admin_shop_subscription_resume', {'id':subscription.id})} %}
+          {% else %}
+            {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('admin_shop_subscription_pause', {'id':subscription.id})} %}
+          {% endif %}
         {% endif %}
       </td>
     </tr>
