--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -26,7 +26,7 @@
           {% include "ClubLayoutBundle:Default:expire_link.html.twig" with {'url':path('admin_shop_subscription_expire', {'id':subscription.id})} %}
           {% if subscription.paused %}
             {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('admin_shop_subscription_resume', {'id':subscription.id})} %}
-          {% else %}
+          {% elseif not subscription.expireDate == '' %}
             {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('admin_shop_subscription_pause', {'id':subscription.id})} %}
           {% endif %}
         {% endif %}
