--- a/src/Club/UserBundle/Resources/views/Group/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/index.html.twig
@@ -1,7 +1,6 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
-<p class="box"><a href="{{ path('admin_group_new') }}" class="btn-create"><span>{% trans %}Create group{% endtrans %}</span></a></p>
 <h2>{% trans %}Groups{% endtrans %}</h2>
 
 <table class="style">
@@ -21,6 +20,7 @@
     <tr>
       <td>{{ group.groupName }} ( {{ group.users|length }} )</td>
       <td>
+        {% include "ClubLayoutBundle:Default:group_link.html.twig" with {'url':path('club_user_group_members', { 'id':group.id })} %}
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_group_edit', { 'id':group.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_group_delete', { 'id':group.id })} %}
       </td>
