--- a/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+{% include "ClubUserBundle:AdminUser:header.html.twig" %}
+
 <form method="post" action="{{ path('admin_user_edit', {'id':user.id}) }}">
   {% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
 </form>
