--- a/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+{% include "ClubUserBundle:AdminUser:header.html.twig" %}
+
 <form method="post" action="{{ path('admin_user_group', {'id': user.id}) }}">
 {{ form_widget(form) }}
 {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
