Changed number to phone_number.

--- a/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
@@ -26,7 +26,7 @@
   <fieldset>
     <legend>{% trans %}Phone Information{% endtrans %}</legend>
 
-    {{ form_row(form.profile.profile_phone.number) }}
+    {{ form_row(form.profile.profile_phone.phone_number) }}
   </fieldset>
 
   {{ form_row(form._token) }}
