--- a/src/Club/UserBundle/Resources/views/User/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/form.html.twig
@@ -26,7 +26,7 @@
   <fieldset>
     <legend>{% trans %}Phone Information{% endtrans %}</legend>
 
-    <p>{{ form_row(form.profile.profile_phone.number) }}</p>
+    <p>{{ form_row(form.profile.profile_phone.phone_number) }}</p>
   </fieldset>
 
   {{ form_row(form._token) }}
