Removed all about vat.

--- a/src/Club/MailBundle/Resources/views/Template/order_new.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/order_new.html.twig
@@ -22,10 +22,7 @@ Products
 {{ product.quantity }} x {{ product.productName }} : {{ product.price }}
 {% endfor %}
 -------------------------------
-Sub-Total: {{ order.price }}
-Vat: {{ order.vat }}
--------------------------------
-Total: {{ order.vatPrice }}
+Total: {{ order.price }}
 -------------------------------
 
 -------------------------------
