--- a/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
@@ -11,9 +11,9 @@
   {% for item in cart.cartProducts %}
   <tr>
     <td>{{ item.productName }}</td>
-    <td>{{ item.vatPrice|price }}</td>
+    <td>{{ item.price|price }}</td>
     <td>{{ item.quantity }} <a href="{{ path('club_shop_checkout_increment', {'id':item.id}) }}">[+]</a>  <a href="{{ path('club_shop_checkout_decrement', {'id':item.id}) }}">[-]</a></td>
-    <td>{{ item.vatSummary|price }}</td>
+    <td>{{ item.summary|price }}</td>
   </tr>
   {% else %}
   <tr>
@@ -27,7 +27,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>{% trans %}Summary{% endtrans %}</b></td>
-    <td>{{ cart.vatPrice|price }}</td>
+    <td>{{ cart.price|price }}</td>
   </tr>
   </tfoot>
 </table>
