--- a/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
@@ -17,7 +17,7 @@
     <tr>
       <td><img src="{{ asset('bundles/clublayout/images/icons/64/Status-image-missing-icon.png') }}" title="{% trans %}No image{% endtrans %}" alt="{% trans %}No image{% endtrans %}" />
       <td><a href="{{ path('shop_product', {'id':product.id}) }}">{{ product.productName }}</a> <em>{{ product.description|truncate(200) }}</em></td>
-      <td>{{ product.specialVatPrice|price }}</td>
+      <td>{{ product.specialPrice|price }}</td>
       <td><a href="{{ path('shop_product_cart', {'id':product.id}) }}"><img src="{{ asset('bundles/clublayout/images/icons/48/shopping-cart-insert-icon.png') }}" alt="{% trans %}Put in cart{% endtrans %}" title="{% trans %}Put in cart{% endtrans %}" /></a></td>
     </tr>
     {% else %}
