--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -34,6 +34,7 @@
         {% elseif subscription.active and not subscription.expireDate == '' %}
           {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('shop_subscription_pause', {'id':subscription.id})} %}
         {% endif %}
+        {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_shop_subscription_show', {'id':subscription.id})} %}
       </td>
     </tr>
   {% else %}
