--- a/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
@@ -18,52 +18,26 @@
       <th>Period:</th>
       <td>{{ subscription.startDate|date('Y-m-d H:i') }} - {% if subscription.expireDate == '' %}Never{% else %}{{ subscription.expireDate|date('Y-m-d H:i') }}{% endif %}</td>
     </tr>
+    <tr>
+      <th>Auto renewal:</th>
+      <td>
+        {% if subscription.hasAttribute('auto_renewal') %}This subscription will automatically be renewed.
+        {% else %}This subscription will not be automatically renewed.{% endif %}
+      </td>
+    </tr>
   </tbody>
 </table>
 
 {% if subscription.type == 'ticket' %}
-<h2>Ticket</h2>
-
-{% set tickets_left = subscription.getStartTickets %}
-<table class="style">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Ticket</th>
-      <th>Balance</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>{{ subscription.createdAt|date('Y-m-d H:i') }}</td>
-      <td>-</td>
-      <td>{{ tickets_left }}</td>
-    </tr>
-    {% for log in subscription.subscriptionTicket %}
-    {% set tickets_left = tickets_left-log.tickets %}
-    <tr>
-      <td>{{ log.createdAt|date('Y-m-d H:i') }}</td>
-      <td>{{ log.tickets }}</td>
-      <td>{{ tickets_left }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-  <tfoot>
-    <tr>
-      <th colspan="4">&#160;</th>
-    </tr>
-  </tfoot>
-</table>
-
+  {% include "ClubShopBundle:Subscription:tickets_table.html.twig" %}
 {% endif %}
 
-<h2>Attributes</h2>
-
-{% for attr in subscription.subscriptionAttributes %}
-{% if attr.attributeName == 'ticket' %}
-{% elseif attr.attributeName == 'auto_renewal' %}
-{% elseif attr.attributeName == 'allowed_pauses' %}
+{% if subscription.hasAttribute('allowed_pauses') %}
+  {% include "ClubShopBundle:Subscription:pause_table.html.twig" %}
 {% endif %}
-{% endfor %}
+
+{% if subscription.location|length > 0 %}
+  {% include "ClubShopBundle:Subscription:location_table.html.twig" %}
+{% endif %}
 
 {% endblock %}
