--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -30,6 +30,7 @@
             {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('admin_shop_subscription_pause', {'id':subscription.id})} %}
           {% endif %}
         {% endif %}
+        {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_shop_subscription_show', {'id':subscription.id})} %}
       </td>
     </tr>
   {% else %}
