--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -29,12 +29,13 @@
       <td>{{ subscription.expireDate|date('Y-m-d H:i') }}</td>
       {% endif %}
       <td>
+        {% include "ClubLayoutBundle:Default:expire_link.html.twig" with {'url':path('club_shop_subscription_expire', {'id':subscription.id})} %}
+        {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_shop_subscription_show', {'id':subscription.id})} %}
         {% if subscription.paused %}
           {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('shop_subscription_resume', {'id':subscription.id})} %}
         {% elseif subscription.active and not subscription.expireDate == '' %}
           {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('shop_subscription_pause', {'id':subscription.id})} %}
         {% endif %}
-        {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_shop_subscription_show', {'id':subscription.id})} %}
       </td>
     </tr>
   {% else %}
