--- a/src/Club/TeamBundle/Resources/views/AdminRepetition/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminRepetition/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubTeamBundle::base.html.twig" %}
 
 {% block body %}
-<p class="box"><a href="{{ path('club_team_adminteam_new') }}" class="btn-create"><span>{% trans %}Create team{% endtrans %}</span></a></p>
+<p class="box"><a href="{{ path('club_team_adminrepetition_new', {'team_id':team.id}) }}" class="btn-create"><span>{% trans %}Create repetition{% endtrans %}</span></a></p>
 
 <table class="style">
   <thead>
