--- a/src/Club/TeamBundle/Resources/views/AdminRepetition/new.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminRepetition/new.html.twig
@@ -2,8 +2,6 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_team_adminrepetition_new', {'schedule_id':schedule.id,'team_id':schedule.team.id}) }}">
-  {% include "ClubTeamBundle:AdminRepetition:form.html.twig" %}
-</form>
+{% include "ClubTeamBundle:AdminRepetition:form.html.twig" with {'path':path('club_team_adminrepetition_new', {'schedule_id':schedule.id,'team_id':schedule.team.id})} %}
 
 {% endblock %}
