--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="content-language" content="en" />
         <meta name="robots" content="noindex,nofollow" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}ClubMaster{% endblock %}</title>
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/reset.css') }}" /> <!-- RESET -->
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/main.css') }}" /> <!-- MAIN STYLE SHEET -->
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/2col.css') }}" title="2col" /> <!-- DEFAULT: 2 COLUMNS -->
