Fixed migration files for TeamBundle, added better support for repetition recurrencies.

--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/editChoice.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/editChoice.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<h2>Delete recurring team</h2>
+<h2>Edit recurring team</h2>
 
 <p>Would you like to change this event only, all events in the series or this and all following events in the series?</p>
 
