--- a/src/Club/LayoutBundle/Resources/views/Default/attend_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/attend_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/user-group-icon.png') }}" class="ico" alt="{% trans %}Attends{% endtrans %}" title="{% trans %}Attends{% endtrans %}" /></a>
+<a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-done.gif') }}" class="ico" alt="{% trans %}Attends{% endtrans %}" title="{% trans %}Attends{% endtrans %}" /></a>
