--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
@@ -10,6 +10,8 @@
   <span class="smaller low">{% trans %}Info: Will this subscription automatically be renewal?{% endtrans %}</span>
   {{ form_row(form.allowed_pauses) }}
   <span class="smaller low">{% trans %}Info: How many pauses is the user of this subscription allowed to take?{% endtrans %}</span>
+  {{ form_row(form.team) }}
+  <span class="smaller low">{% trans %}Info: Is allowed to use teams?{% endtrans %}</span>
   {{ form_row(form.start_date) }}
   <span class="smaller low">{% trans %}Info: What will be the first day of this subscription?{% endtrans %}</span>
   {{ form_row(form.expire_date) }}
