--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/index.html.twig
@@ -31,6 +31,7 @@
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_team_adminschedule_edit', { 'id':schedule.id,'team_id':team.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_team_adminschedule_delete', { 'id':schedule.id,'team_id':team.id })} %}
         {% include "ClubLayoutBundle:Default:repetition_link.html.twig" with {'url':path('club_team_adminrepetition_index', { 'schedule_id':schedule.id,'team_id':team.id })} %}
+        {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('club_team_adminschedule_participant', { 'id':schedule.id,'team_id':team.id })} %}
       </td>
     </tr>
   {% else %}
