--- a/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -9,6 +9,7 @@
 
 {% endif %}
 
+{% include "ClubDashboardBundle:Dashboard:team_table.html.twig" %}
 {% include "ClubDashboardBundle:Dashboard:order_table.html.twig" %}
 
 {% endblock %}
