--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
@@ -27,7 +27,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="3">There are no participants at the time</td>
+    <td colspan="3">{% trans %}There are no participants.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
