--- a/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -4,7 +4,7 @@
 
 {% if is_granted('ROLE_ADMIN') %}
 <p class="box">
-  <a href="{{ path('club_dashboard_admindashboard_index') }}" class="btn-info"><span>Admin Dashboard</span></a>
+  <a href="{{ path('club_dashboard_admindashboard_index') }}" class="btn-info"><span>{% trans %}Admin Dashboard{% endtrans %}</span></a>
 </p>
 
 {% endif %}
